--- a/webBanTiVi/src/main/resources/templates/user/page/invoice/detail_invoice.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/invoice/detail_invoice.html
@@ -58,7 +58,7 @@
                             </div>
                             <div class="col-sm-7">
                                 <div class="mb-2">
-                                    <span th:text="${billProduct?.product.nameProduct}"></span></div>
+                                    <span th:text="${billProduct?.product.product.nameProduct}"></span></div>
                                 <div class="mb-2">
                                     <span>Số lượng: [(${billProduct.quantity})]</span></div>
                             </div>
@@ -70,13 +70,6 @@
                                 <div>
                                     <span>[(${#numbers.formatDecimal(billProduct.product.priceExport,0,'COMMA',0,'POINT')})]</span>
                                     <span class="fs-tiny text-decoration-underline">đ</span>
-                                </div>
-                            </div>
-                            <div class="text-end mb-3">
-                                <div th:if="${bill.billStatus.code== 'CO'}">
-                                    <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal"
-                                            th:data-bs-target="|#modal${billProduct.id}|">Trả hàng
-                                    </button>
                                 </div>
                             </div>
 
@@ -112,7 +105,7 @@
                                                         </td>
                                                         <td>
                                                             <input type="text" th:name="productName"
-                                                                   th:value="${billProduct.product.nameProduct}">
+                                                                   th:value="${billProduct.product.product.nameProduct}">
                                                         </td>
                                                         <td>
                                                             <input type="number" class="quantityReturn" value="0"
