--- a/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
@@ -149,12 +149,7 @@
                                         <div class="row justify-content-center">
                                             <span class="col fs-5">Tổng tiền: </span>
                                             <span class="col text-danger text-center">$
-                                                                                    <span th:text="${total}"
-                                                                                          name="totalPrice"></span>
-                                                <!--                                                                                                <input th:value="${total}"-->
-                                                <!--                                                                                                       disabled-->
-                                                <!--                                                                                                       style="background-color: white"-->
-                                                <!--                                                                                                       name="totalPrice">-->
+                                                 <span th:text="${total}" name="totalPrice"></span>
                                             </span>
                                         </div>
                                         <hr>
