--- a/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
@@ -99,7 +99,8 @@
                                     <i class="bx bx-dots-vertical-rounded"></i>
                                 </button>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item edit-product" href="javascript:void(0);"
+                                    <a class="dropdown-item edit-product" data-bs-toggle="modal"
+                                       data-bs-target="#modalProduct" href="javascript:void(0);"
                                        th:value="${product.id}"><i
                                             class="bx bx-edit-alt me-1"></i> Chỉnh sửa</a>
                                     <a class="dropdown-item delete-product" href="javascript:void(0);"
@@ -159,6 +160,37 @@
                         </div>
                     </div>
                 </div>
+                <div class="modal fade" id="modalProduct" tabindex="-1" style="display: none">
+                    <div class="modal-dialog modal-lg" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Chi tiết sản phẩm</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <span class="fs-5">Thông tin <i class='bx bx-edit-alt' id="edit-attri"></i></span>
+                                <div class="table-responsive">
+                                    <table class="table" id="table-detail-modal">
+                                        <tbody class="table-border-bottom-0">
+                                        <tr>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+                                    Close
+                                </button>
+                                <button type="button" class="btn btn-primary" id="save">Lưu</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="card-footer">
                 <div>
@@ -175,6 +207,7 @@
                             <li class="page-item mx-2">
                                 <div class="input-group input-group-merge">
                                     <input class="form-control inputPage" id="pageInput" type="number" name="page"
+                                           th:temp="*{page}"
                                            th:value="*{page}">
                                     <span class="input-group-text" id="total" th:value="${listProduct.totalPages}">/[(${listProduct.totalPages})]</span>
                                     <!--                                                                    <input id="totalPage" value="${session.list.totalPages}" hidden="hidden">-->
