--- a/webBanTiVi/src/main/resources/templates/login/error403.html
+++ b/webBanTiVi/src/main/resources/templates/login/error403.html
@@ -1,96 +1,5 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Title</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<!DOCTYPE html>-->
-<!--<html lang="en"-->
-<!--      class="light-style layout-menu-fixed"-->
-<!--      dir="ltr"-->
-<!--      xmlns:th="http://www.thymeleaf.org">-->
-
-<!--<head>-->
-<!--    <meta charset="utf-8"/>-->
-<!--    <meta-->
-<!--            name="viewport"-->
-<!--            content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"-->
-<!--    />-->
-
-<!--    <title>Big6 Shop</title>-->
-
-<!--    <meta name="description" content=""/>-->
-<!--    <link rel="icon" type="image/x-icon" th:href="@{/image/logobig6-03.png}"/>-->
-
-<!--    <link rel="stylesheet" th:href="@{/admin/assets/vendor/fonts/boxicons.css}"/>-->
-<!--    <link rel="stylesheet" th:href="@{/admin/assets/vendor/css/bootstrap.css}" class="template-customizer-core-css"/>-->
-<!--    <link rel="stylesheet" th:href="@{/admin/assets/vendor/css/theme-default.css}"-->
-<!--          class="template-customizer-theme-css"/>-->
-<!--    <link rel="stylesheet" th:href="@{/admin/assets/css/demo.css}"/>-->
-<!--    <link rel="stylesheet" th:href="@{/admin/assets/vendor/css/pages/page-auth.css}"/>-->
-
-<!--    <script th:src="@{/admin/assets/vendor/js/helpers.js}"></script>-->
-
-<!--</head>-->
-
-<!--<body>-->
-<!--&lt;!&ndash; Content &ndash;&gt;-->
-<!--<div class="header">-->
-<!--    <nav class="header-navbar">-->
-<!--        <ul class="header-nav-list">-->
-<!--            <li class="header-nav-item">Hệ thống cửa hàng tivi</li>-->
-<!--            <li class="header-nav-item">-->
-<!--                <a class="header-nav-item-link" href="/">LOGO</a>-->
-<!--            </li>-->
-<!--        </ul>-->
-
-<!--        <ul class="header-nav-list">-->
-<!--            <li class="header-nav-item">-->
-<!--                <a href="#" class="header-nav-item-link">HỎI ĐÁP</a>-->
-<!--            </li>-->
-<!--            <li class="header-nav-item">-->
-<!--                <a href="/" class="header-nav-item-link">QUAY LẠI</a>-->
-<!--            </li>-->
-<!--        </ul>-->
-<!--    </nav>-->
-<!--</div>-->
-
-
-<!--<div class="container">-->
-<!--    <div class="starter-template">-->
-<!--        <h1>403 - Access is denied</h1>-->
-<!--        <div th:inline="text">Hello ,-->
-<!--            you do not have permission to access this page.</div>-->
-<!--    </div>-->
-
-<!--</div>-->
-<!--<script th:src="@{/admin/assets/vendor/libs/jquery/jquery.js}"></script>-->
-<!--<script th:src="@{/admin/assets/vendor/libs/popper/popper.js}"></script>-->
-<!--<script th:src="@{/admin/assets/vendor/js/bootstrap.js}"></script>-->
-<!--<script th:src="@{/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js}"></script>-->
-<!--<script th:src="@{/admin/assets/vendor/js/menu.js}"></script>-->
-<!--<script th:src="@{/admin/assets/js/main.js}"></script>-->
-
-<!--<script async defer th:src="@{https://buttons.github.io/buttons.js}"></script>-->
-<!--</body>-->
-<!--</html>-->
-
-
 <!DOCTYPE html>
 
-<!-- =========================================================
-* Sneat - Bootstrap 5 HTML Admin Template - Pro | v1.0.0
-==============================================================
-
-* Product Page: https://themeselection.com/products/sneat-bootstrap-html-admin-template/
-* Created by: ThemeSelection
-* License: You must have a valid license purchased in order to legally use the theme for your project.
-* Copyright ThemeSelection (https://themeselection.com)
-
-=========================================================
- -->
-<!-- beautify ignore:start -->
 <html
         lang="en"
         class="light-style"
@@ -106,12 +15,12 @@
             content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>Error - Pages | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>
+<!--    <title>Error - Pages | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>-->
 
     <meta name="description" content="" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/admin/assets/img/favicon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="static/image/logobig6-03.png" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -151,7 +60,7 @@
     <div class="misc-wrapper">
         <h2 class="mb-2 mx-2">Access Deneid :(</h2>
         <p class="mb-4 mx-2">Oops! 😖 Your page access level is denied!.</p>
-        <a href="/" class="btn btn-primary">Back to home</a>
+        <a class="btn btn-primary text-white" onclick="window.history.back()">Back to home</a>
         <div class="mt-3">
             <img
                     src="/image/img.png"
