--- a/webBanTiVi/src/main/resources/templates/user/index.html
+++ b/webBanTiVi/src/main/resources/templates/user/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" th:href="@{/admin/assets/css/demo.css}"/>
 
     <link rel="stylesheet" th:href="@{/admin/assets/css/select2.min.css}"/>
+    <link rel="stylesheet" th:href="@{/admin/assets/css/sweetalert2.min.css}"/>
 
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"/>
 
@@ -28,13 +29,11 @@
     <link rel="stylesheet" th:href="@{/admin/plugin/css/select2-plugin.css}"/>
     <link rel="stylesheet" th:href="@{/admin/plugin/css/bill.css}"/>
     <link rel="stylesheet" th:href="@{/admin/plugin/css/invoice_detail.css}">
+    <!-- Helpers -->
+    <script th:src="@{/admin/assets/vendor/js/helpers.js}"></script>
+    <script th:src="@{/admin/assets/vendor/libs/jquery/jquery.js}"></script>
+    <script th:src="@{/admin/assets/js/sweetalert2.min.js}"></script>
 
-    <!-- Helpers -->
-    <script th:src="@{/admin/assets/vendor/js/helpers.js}"></script>
-    <script th:src="@{/admin/assets/vendor/libs/jquery/jquery.js}"></script>
-    <!-- Helpers -->
-    <script th:src="@{/admin/assets/vendor/js/helpers.js}"></script>
-    <script th:src="@{/admin/assets/vendor/libs/jquery/jquery.js}"></script>
     <style>
         .btn-top {
             opacity: 0.5;
