--- a/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
@@ -117,10 +117,12 @@
                         <a th:class="|nav-link page ${active=='invoice' ?'active':''}|" href="/invoice">Đơn hàng</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a th:class="|nav-link page ${active=='promotion' ?'active':''}|" href="/promotion">Khuyến mãi</a>
+                        <a th:class="|nav-link page ${active=='promotion' ?'active':''}|" href="/promotion">Khuyến
+                            mãi</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a th:class="|nav-link page ${active=='about' ?'active':''}|" href="javascript:void(0)">Liên hệ</a>
+                        <a th:class="|nav-link page ${active=='about' ?'active':''}|" href="javascript:void(0)">Liên
+                            hệ</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
@@ -129,7 +131,7 @@
                             <span class="position-relative">
                                 <i class='bx bx-cart bx-md'></i>
                                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning "
-                                      style="font-size: 60%">[(${session.list==null?0:#lists.size(session.list)})]</span>
+                                      style="font-size: 60%">[(${session.list==null? 0:#lists.size(session.list)})]</span>
                             </span>
                         </a>
                     </li>
