--- a/webBanTiVi/src/main/resources/templates/user/page/product/cart_null.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/cart_null.html
@@ -1,4 +1,5 @@
 <div class="card">
+    <span id="message"hidden>[(${message})]</span>
     <h5 class="card-header">Delete Account</h5>
     <div class="card-body">
         <form id="formAccountDeactivation" onsubmit="return false">
@@ -16,3 +17,20 @@
         </form>
     </div>
 </div>
+<script> if (document.getElementById("message").textContent == 'xoathanhcong') {
+    const Toast = Swal.mixin({
+        toast: true,
+        position: "top-end",
+        showConfirmButton: false,
+        timer: 3000,
+        timerProgressBar: true,
+        didOpen: (toast) => {
+            toast.onmouseenter = Swal.stopTimer;
+            toast.onmouseleave = Swal.resumeTimer;
+        }
+    });
+    Toast.fire({
+        icon: "success",
+        title: "Xóa thành công"
+    });
+}</script>
