--- a/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
@@ -61,18 +61,18 @@
                         <div class="row justify-content-center">
                             <div class="col-md-7 mb-5">
                                 <div class="card mb-4">
-                                    <span class="card-header text-uppercase fs-5">THÔNG TIN KHÁCH HÀNG</span>
+                                    <span class="card-header text-uppercase fs-5">THÔNG TIN KHÁCH HÀNG:</span>
                                     <div class="card-body" th:id="add">
                                         <!--                                            ten, sdt-->
                                         <div class="row justify-content-between">
                                             <div class="col">
-                                                <label class="form-label">Họ và Tên</label>
-                                                <input class="form-control" type="text" placeholder="họ và tên"
+                                                <label class="form-label">Tên người nhận</label>
+                                                <input class="form-control" type="text" placeholder="họ và tên" th:field="*{name}"
                                                        id="name" th:name="name">
                                             </div>
                                             <div class="col">
-                                                <label class="form-label">Số Điện Thoại</label>
-                                                <input class="form-control" type="text" placeholder="VN (+84)"
+                                                <label class="form-label">Số điện thoại người nhận</label>
+                                                <input class="form-control" type="text" placeholder="VN (+84)" th:field="*{phoneNumber}"
                                                        id="phoneNumber" th:name="phoneNumber">
                                             </div>
                                         </div>
@@ -80,14 +80,14 @@
                                         <!--                                                email-->
                                         <div class="mb-3">
                                             <label class="form-label">Email</label>
-                                            <input type="email" class="form-control" placeholder="Email"
+                                            <input type="email" class="form-control" placeholder="oanhpham085@gmail.com" th:field="*{email}"
                                                    id="email" th:name="email">
                                         </div>
                                         <br>
                                         <!--                                                address-->
                                         <div class="mb-3">
-                                            <label class="form-label">Address</label>
-                                            <input type="text" class="form-control" placeholder="Address"
+                                            <label class="form-label">Địa chỉ nhận hàng</label>
+                                            <input type="text" class="form-control" placeholder="Thôn liên trì 1, xã Yên hòa" th:field="*{address}"
                                                    id="address" th:name="address">
                                         </div>
 
@@ -95,10 +95,10 @@
                                             <table class="table table-borderless">
                                                 <thead>
                                                 <tr>
-                                                    <th>Product</th>
-                                                    <th>Price</th>
-                                                    <th>Quantity</th>
-                                                    <th>Total</th>
+                                                    <th>Sản phẩm</th>
+                                                    <th>Giá</th>
+                                                    <th>Số lượng</th>
+                                                    <th>Thành tiền</th>
                                                     <th></th>
                                                 </tr>
                                                 </thead>
@@ -116,9 +116,9 @@
                                                     </td>
                                                     <td>
                                                         <div>
-                                                            <span class="fs-5">$<span class="price-export"
-                                                                                      th:value="${item.product.priceExport}"
-                                                                                      th:text="${item.product.priceExport}"></span>
+                                                            <span class="fs-5"><span class="price-export"
+                                                                                     th:value="${item.product.priceExport}"
+                                                                                     th:text="${item.product.priceExport}"></span>
                                                             </span>
                                                         </div>
                                                     </td>
@@ -148,13 +148,8 @@
                                         </div>
                                         <div class="row justify-content-center">
                                             <span class="col fs-5">Tổng tiền: </span>
-                                            <span class="col text-danger text-center">$
-                                                                                    <span th:text="${total}"
-                                                                                          name="totalPrice"></span>
-                                                <!--                                                                                                <input th:value="${total}"-->
-                                                <!--                                                                                                       disabled-->
-                                                <!--                                                                                                       style="background-color: white"-->
-                                                <!--                                                                                                       name="totalPrice">-->
+                                            <span class="col text-danger text-center">
+                                                <span th:text="${total}" class="total-pro" name="totalPrice"></span>
                                             </span>
                                         </div>
                                         <hr>
@@ -163,14 +158,14 @@
                                             <div class="row gy-3">
                                                 <div class="col-md">
                                                     <div class="form-check form-check-inline mt-3">
-                                                        <input class="form-check-input" type="radio"
+                                                        <input class="form-check-input" type="radio" th:field="*{paymentMethod}"
                                                                name="paymentMethod" id="inlineRadio1"
                                                                th:value="1" checked>
                                                         <label class="form-check-label" for="inlineRadio1">Thanh toán
                                                             tiền mặt</label>
                                                     </div>
                                                     <div class="form-check form-check-inline">
-                                                        <input class="form-check-input" type="radio"
+                                                        <input class="form-check-input" type="radio"th:field="*{paymentMethod}"
                                                                name="paymentMethod" id="inlineRadio2"
                                                                th:value="2">
                                                         <label class="form-check-label" for="inlineRadio2">Thanh toán
@@ -190,8 +185,6 @@
                                                     formaction="/cart">
                                                 Hủy
                                             </button>
-                                            <smal>Bạn có thể chọn hình thức thanh toán sau khi đặt hàng
-                                            </smal>
                                         </div>
                                     </div>
                                 </div>
@@ -244,7 +237,6 @@
                 var totalPro = 0;
                 for (let i = 0; i < totalPriceForm.length; i++) {
                     totalPro = Number(totalPriceForm[i].textContent) + Number(totalPro);
-                    console.log(totalPro);
                 }
 
                 totalProForm.innerText = totalPro
