--- a/webBanTiVi/src/main/resources/templates/user/page/product/pro_cart.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/pro_cart.html
@@ -52,6 +52,7 @@
     }
 </style>
 <div class="container">
+    <span hidden id="message">[(${message})]</span>
     <div class="row">
         <div class="col-lg-9 mb-4 order-0">
             <!--    <div class="col-md-10">-->
@@ -90,12 +91,18 @@
                                                        class="text-black">
                                                         <div th:each="image:${item.product.listImage}">
                                                             <img th:if="${image.location == true}"
-                                                                 th:src="@{'/image/'+${image.link}}"
+                                                                 th:src="@{'/image/product/'+${image.link}}"
                                                                  alt="" width="100px">
                                                         </div>
                                                         <div>
-                                                    <span class="fs-5"
-                                                          th:text="${item.product.product.nameProduct}"></span></div>
+                                                            <span class="fs-5"
+                                                                  th:text="${item.product.product.nameProduct}"></span>
+                                                            <div th:each="field:${item.product.fieldList}">
+                                                                <p><span
+                                                                        th:text="|${field.field.name}  :  ${field.value}|"></span>
+                                                                </p>
+                                                            </div>
+                                                        </div>
                                                     </a>
                                                 </td>
                                                 <td>
@@ -103,6 +110,10 @@
                                                                              th:value="${item.product.priceExport}"
                                                                              th:text="${#numbers.formatDecimal(item.product.priceExport,0,'COMMA',0,'POINT')}"></span>
                                                     </span>
+<!--                                                    <span class="fs-5"><span class=""-->
+<!--                                                                             th:value="${item.product.coupon.value}"-->
+<!--                                                                             th:text="${#numbers.formatDecimal(item.product.priceExport,0,'COMMA',0,'POINT')}"></span>-->
+<!--                                                    </span>-->
                                                 </td>
                                                 <td>
                                                     <div class="buttons_added" th:id="${item.product.id}">
@@ -164,17 +175,17 @@
                     <!--                    </div>-->
                     <br>
                     <div class="card shadow-none bg-transparent border border-secondary mb-3">
-                        <div class="card-header">
-                            <div class="card-body">
-
-                                <p class="card-text">Tổng tiền: <span class="text-end text-danger">
-                                    <span class="total-pro" th:text="${total}"></span>
-                                </span></p>
-                                <div style="text-align: center">
-                                    <a type="submit" class="btn btn-primary" th:href="@{/pay}">Thanh
-                                        Toán
-                                    </a>
-                                </div>
+                        <div class="card-body">
+                               <span> Tổng tiền: <span class="text-end text-danger">
+                                    <span class="total-pro"
+                                          th:text="|${#numbers.formatDecimal(total,0,'COMMA',0,'POINT')} (VNĐ)|"></span>
+                                </span></span>
+                        </div>
+                        <div class="card-footer">
+                            <div style="text-align: center">
+                                <a type="submit" class="btn btn-primary" th:href="@{/pay}">Thanh
+                                    Toán
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -183,81 +194,115 @@
         </div>
     </div>
 </div>
-<script>//<![CDATA[
-const plus = document.querySelectorAll(".plus")
-const minus = document.querySelectorAll(".minus")
+<script>
 
-function tinhtong() {
-    const totalPriceForm = document.querySelectorAll(".total-price")
-    const totalProForm = document.querySelector(".total-pro")
-    var totalPro = 0;
-    for (let i = 0; i < totalPriceForm.length; i++) {
-        totalPro = Number(totalPriceForm[i].textContent) + Number(totalPro);
-        console.log(totalPro);
+    if (document.getElementById("message").textContent == 'xoathanhcong') {
+        const Toast = Swal.mixin({
+            toast: true,
+            position: "top-end",
+            showConfirmButton: false,
+            timer: 3000,
+            timerProgressBar: true,
+            didOpen: (toast) => {
+                toast.onmouseenter = Swal.stopTimer;
+                toast.onmouseleave = Swal.resumeTimer;
+            }
+        });
+        Toast.fire({
+            icon: "success",
+            title: "Xóa thành công"
+        });
     }
-    totalProForm.innerText = totalPro
-}
+    if(document.getElementById("message").textContent=='update-success'){
 
-$(document).ready(
-    tinhtong(),
-    $.each(plus, function (index, item) {
-        // var temp = index
-        item.addEventListener("click", function (e) {
-            var quantityForm = document.querySelectorAll(".input-qty")
-            const totalPriceForm = document.querySelectorAll(".total-price")
-            const priceExportForm = document.querySelectorAll(".price-export")
-
-            var valueInput = quantityForm[index].value
-
-            if (valueInput < Number(quantityForm[index].getAttribute('max'))) {
-                quantityForm[index].value = Number(valueInput) + 1
-                valueInput = Number(valueInput) + 1
+        const Toast = Swal.mixin({
+            toast: true,
+            position: "top-end",
+            showConfirmButton: false,
+            timer: 3000,
+            timerProgressBar: true,
+            didOpen: (toast) => {
+                toast.onmouseenter = Swal.stopTimer;
+                toast.onmouseleave = Swal.resumeTimer;
             }
+        });
+        Toast.fire({
+            icon: "success",
+            title: "Đã cập nhật lại giỏ hàng"
+        });
+    }
+    const plus = document.querySelectorAll(".plus")
+    const minus = document.querySelectorAll(".minus")
 
-            // var quantity = quantityForm[index].value
-            var priceExport = priceExportForm[index].getAttribute("value")
-            var totalPrice = Number(valueInput) * Number(priceExport)
+    function tinhtong() {
+        const totalPriceForm = document.querySelectorAll(".total-price")
+        const totalProForm = document.querySelector(".total-pro")
+        var totalPro = 0;
+        for (let i = 0; i < totalPriceForm.length; i++) {
+            totalPro = Number(totalPriceForm[i].textContent) + Number(totalPro);
+            console.log(totalPro);
+        }
+        totalProForm.innerText = totalPro
+    }
 
-            totalPriceForm[index].innerText = totalPrice
-            const totalProForm = document.querySelector(".total-pro")
-            var totalPro = 0;
-            for (let i = 0; i < totalPriceForm.length; i++) {
-                totalPro = Number(totalPriceForm[i].textContent) + Number(totalPro);
-                console.log(totalPro);
-            }
+    $(document).ready(
+        // tinhtong(),
+        $.each(plus, function (index, item) {
+            // var temp = index
+            item.addEventListener("click", function (e) {
+                var quantityForm = document.querySelectorAll(".input-qty")
+                const totalPriceForm = document.querySelectorAll(".total-price")
+                const priceExportForm = document.querySelectorAll(".price-export")
 
-            totalProForm.innerText = totalPro
+                var valueInput = quantityForm[index].value
+
+                if (valueInput < Number(quantityForm[index].getAttribute('max'))) {
+                    quantityForm[index].value = Number(valueInput) + 1
+                    valueInput = Number(valueInput) + 1
+                }
+
+                // var quantity = quantityForm[index].value
+                var priceExport = priceExportForm[index].getAttribute("value")
+                var totalPrice = Number(valueInput) * Number(priceExport)
+
+                totalPriceForm[index].innerText = totalPrice
+                const totalProForm = document.querySelector(".total-pro")
+                var totalPro = 0;
+                for (let i = 0; i < totalPriceForm.length; i++) {
+                    totalPro = Number(totalPriceForm[i].textContent) + Number(totalPro);
+                    console.log(totalPro);
+                }
+
+                totalProForm.innerText = totalPro
+            })
+        }),
+        $.each(minus, function (index, item) {
+            // var temp = index
+            item.addEventListener("click", function (e) {
+
+                const totalPriceForm = document.querySelectorAll(".total-price")
+                const priceExportForm = document.querySelectorAll(".price-export")
+                var quantityForm = document.querySelectorAll(".input-qty")
+
+                var valueInput = quantityForm[index].value// = 10
+
+                if (valueInput > Number(quantityForm[index].getAttribute('min'))) {
+                    quantityForm[index].value = Number(valueInput) - 1
+                    valueInput = Number(valueInput) - 1
+                }
+
+                var priceExport = priceExportForm[index].getAttribute("value")
+                var totalPrice = Number(valueInput) * Number(priceExport)
+
+                totalPriceForm[index].innerText = totalPrice
+                tinhtong();
+            })
         })
-    }),
-    $.each(minus, function (index, item) {
-        // var temp = index
-        item.addEventListener("click", function (e) {
-
-            const totalPriceForm = document.querySelectorAll(".total-price")
-            const priceExportForm = document.querySelectorAll(".price-export")
-            var quantityForm = document.querySelectorAll(".input-qty")
-
-            var valueInput = quantityForm[index].value// = 10
-
-            if (valueInput > Number(quantityForm[index].getAttribute('min'))) {
-                quantityForm[index].value = Number(valueInput) - 1
-                valueInput = Number(valueInput) - 1
-            }
-
-            var priceExport = priceExportForm[index].getAttribute("value")
-            var totalPrice = Number(valueInput) * Number(priceExport)
-
-            totalPriceForm[index].innerText = totalPrice
-            tinhtong();
-        })
-    })
-)
+    )
 
 
-function xoa(x) {
-    var tr = x.parentElement.parentElement;
-    tr.remove();
-}
-
-
-//]]></script>
+    function xoa(x) {
+        var tr = x.parentElement.parentElement;
+        tr.remove();
+    }
+</script>
