--- a/webBanTiVi/src/main/resources/templates/user/page/invoice/detail_invoice.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/invoice/detail_invoice.html
@@ -204,7 +204,7 @@
                             </div>
                         </div>
                         <div class="text-center mt-2">
-                            <a type="button" class="btn btn-outline-dark" href="/order">Về danh sách đơn hàng</a>
+                            <a type="button" class="btn btn-outline-dark" href="/order" sec:authorize="isAuthenticated()">Về danh sách đơn hàng</a>
                         </div>
                     </div>
                 </div>
