--- a/webBanTiVi/src/main/resources/templates/login/login.html
+++ b/webBanTiVi/src/main/resources/templates/login/login.html
@@ -24,7 +24,7 @@
           class="template-customizer-theme-css"/>
     <link rel="stylesheet" th:href="@{/admin/assets/css/demo.css}"/>
     <link rel="stylesheet" th:href="@{/admin/assets/vendor/css/pages/page-auth.css}"/>
-
+    <link rel="stylesheet" th:href="@{/admin/assets/css/sweetalert2.min.css}"/>
     <script th:src="@{/admin/assets/vendor/js/helpers.js}"></script>
 
 </head>
@@ -70,7 +70,8 @@
                     <!-- /Logo -->
                     <h4 class="mb-2">Chào mừng đến với Big6store! 👋</h4>
                     <p class="mb-4">Chào mừng sự trở lại của quý khách hàng!</p>
-
+                    <input type="text" th:value="${error}" id="error" hidden="hidden" >
+                    <input type="text" th:value="${success}" id="success" hidden="hidden" >
                     <form  class="mb-3" method="post"  th:object="${login}" th:action="@{/login}">
                         <div class="mb-3">
                             <label  class="form-label">Tên tài khoản</label>
@@ -140,13 +141,6 @@
         nhanh nhất.
     </div>
 </div>
-<!--<script async defer th:src="@{https://buttons.github.io/buttons.js}"></script>-->
-<!--<script th:src="@{/admin/assets/vendor/libs/jquery/jquery.js}"></script>-->
-<!--<script th:src="@{/admin/assets/vendor/libs/popper/popper.js}"></script>-->
-<!--<script th:src="@{/admin/assets/vendor/js/bootstrap.js}"></script>-->
-<!--<script th:src="@{/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js}"></script>-->
-<!--<script th:src="@{/admin/assets/vendor/js/menu.js}"></script>-->
-<!--<script th:src="@{/admin/assets/js/main.js}"></script>-->
 
 <script th:src="@{/admin/assets/vendor/libs/jquery/jquery.js}"></script>
 <script th:src="@{/admin/assets/vendor/libs/popper/popper.js}"></script>
@@ -154,8 +148,44 @@
 <script th:src="@{/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js}"></script>
 <script th:src="@{/admin/assets/vendor/js/menu.js}"></script>
 <script th:src="@{/admin/assets/js/main.js}"></script>
-
 <script async defer th:src="@{https://buttons.github.io/buttons.js}"></script>
+<script th:src="@{/admin/assets/js/sweetalert2.min.js}"></script>
 
+<script>
+    if(document.getElementById("error").value=="error") {
+        const Toast = Swal.mixin({
+            toast: true,
+            position: "top-end",
+            showConfirmButton: false,
+            timer: 3000,
+            timerProgressBar: true,
+            didOpen: (toast) => {
+                toast.onmouseenter = Swal.stopTimer;
+                toast.onmouseleave = Swal.resumeTimer;
+            }
+        });
+        Toast.fire({
+            icon: "error",
+            title: "Sai thông tin đăng nhập!"
+        });
+    }
+    if(document.getElementById("success").value=="success") {
+        const Toast = Swal.mixin({
+            toast: true,
+            position: "top-end",
+            showConfirmButton: false,
+            timer: 3000,
+            timerProgressBar: true,
+            didOpen: (toast) => {
+                toast.onmouseenter = Swal.stopTimer;
+                toast.onmouseleave = Swal.resumeTimer;
+            }
+        });
+        Toast.fire({
+            icon: "success",
+            title: "Đăng ký tài khoản thành công!"
+        });
+    }
+</script>
 </body>
 </html>
