oanh up code cập nhật thông tin sản phẩm

--- a/webBanTiVi/src/main/resources/templates/user/page/home/home.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/home/home.html
@@ -405,7 +405,7 @@
                                             <span class="fs-5 fw-semibold card-title"
                                                   th:text="${tivi.nameProduct}">
                                                         </span></a>
-                                    <div th:if="${tivi.price!=0}"><span class="text-strike-through fs-6 "> [(${tivi.price)]<small
+                                    <div th:if="${tivi.price!=0}"><span class="text-strike-through fs-6 "> [(${tivi.price})]<small
                                             class="align-text-top">đ</small></span>
                                     </div>
                                     <div><span class="text-danger fs-6 fw-bold"
