--- a/webBanTiVi/src/main/resources/templates/user/page/promotion/coupondetail.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/promotion/coupondetail.html
@@ -5,10 +5,10 @@
     <div class="container">
         <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3">
             <h3 class="header col text-center bg-red pt-2 pb-2 title px-3 text-uppercase fw-bold">
-                Giảm ngay [(${couponres.getValue()})]% từ sản phẩm
+                Giảm ngay [(${discount.getValue()})]% từ sản phẩm
             </h3>
         </div><hr>
-        <img th:src="@{'/image/' + *{couponres.getImage()}}" width="100%" height="auto"  display="block" style="text-align: center">
+        <img th:src="@{'/image/' + *{discount.getImage()}}" width="100%" height="auto"  display="block" style="text-align: center">
         <hr>
     </div>
 </section>
@@ -19,25 +19,26 @@
         </h3>
     </div>
     <div class="row row-cols-1 row-cols-lg-4 row-cols-md-4 row-cols-sm-2 g-4">
-        <div th:each="product : ${listproduct}">
+        <div th:each="tivi : ${listproduct}">
             <div class="col">
         <div class="card h-100 item-product">
-            <img class="card-img-top" th:src="@{'/image/' + *{product.getListImage().get(0).getLink()}}"
-                 alt="Card image cap"/>
             <div class="card-body">
-                <a  th:href="@{'/product/detail/' + *{product.getId()}}" class="stretched-link mb-2"><span
-                        class="fs-4 fw-semibold card-title">
-                                                        [(${product.getProduct().getNameProduct()})]</span></a>
-                <hr>
-                <div><span class="text-strike-through fs-big">[(${product.getPriceExport().intValue()})]<small
+                <img class="img-fluid d-flex mx-auto my-4"
+                     th:src="|/image/product/${tivi.getListImage().get(0).getLink()}|"
+                     alt="Hình ảnh bị lỗi"/>
+                <a th:href="@{'/product/detail/'+${tivi.getId()}}"
+                   class="stretched-link mb-2 text-black">
+                                            <span class="fs-5 fw-semibold card-title"
+                                                  th:text="${tivi.getProduct().getNameProduct()}">
+                                                        </span></a>
+                <div th:if="${tivi.getPriceExport().intValue()!=0}"><span class="text-strike-through fs-6 "> [(${tivi.getPriceExport().intValue()})]<small
                         class="align-text-top">đ</small></span>
                 </div>
-                <div><span class="text-danger fs-large fw-bold">
-            [(${product.getPriceExport().intValue()-(product.getPriceExport().intValue()*giagiam/100)})]<small class="align-text-top">đ</small>
-                </span>
+                <div><span class="text-danger fs-6 fw-bold"
+                >[(${tivi.getPriceExport().intValue() - (tivi.getPriceExport().intValue()* giam/100)})]<small
+                        class="align-text-top">đ</small></span>
                 </div>
-                <div>
-                    <span class="border mx-1 p-1">Giá đã giảm [(${couponres.getValue()})]%</span>
+                <div class="mb-1"><span class="border mx-1 p-1">Giá đã giảm [(${discount.getValue()})]%</span>
                 </div>
             </div>
         </div>
